# Thrilldigger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Thrilldigger.pro  Thrilldigger.sln  Thrilldigger.vcxproj  Thrilldigger.vcxproj.filters  application.qrc  benchmark.cpp  benchmark.h  board.cpp  board.h  celltype.h  configurationiterator.cpp  configurationiterator.h  constraint.h  dugtype.h  hole.h  partition.h  partitioniterator.cpp  partitioniterator.h  problemparameters.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  simulatorwindow.cpp  simulatorwindow.h  simulatorwindow.ui  solver.cpp  solver.h  solverwindow.cpp  solverwindow.h  solverwindow.ui  vector2d.h
cmake/: CompilerWarnings.cmake
forms/: settingswindow.ui  simulatorwindow.ui  solverwindow.ui
headers/: benchmark.h  board.h  configurationiterator.h  constraint.h  difficulty.h  dugtype.h  partition.h  partitioniterator.h  problemparameters.h  rupeevalues.h  settingswindow.h  simulatorwindow.h  solver.h  solverwindow.h  vector2d.h
src/: benchmark.cpp  board.cpp  configurationiterator.cpp  constraint.cpp  dugtype.cpp  main.cpp  partition.cpp  partitioniterator.cpp  problemparameters.cpp  rupeevalues.cpp  settingswindow.cpp  simulatorwindow.cpp  solver.cpp  solverwindow.cpp  vector2d.cpp
